Compile main sources on java 8
compiling on java 8 will allow maximum backward compatibility. this will allow plugins using this library to test to still target pre Gradle 9 versions which may still run on gradle 8 while still testing against Gradle 9+, for which, the current major version of this library is required. We will bump java baseline to 17 in the next major (12.x)

allow kotlin DSL to author groovy buildscripts: this will help migration of tests written in groovy convert to kotlin without needing to convert raw generated buildscripts as well

properly annotate additional non-testkit based classes as @Deprecated